Estudo do comportamento das variáveis do problema House Prices do Kaggle

--- a/house_prices.ipynb
+++ b/house_prices.ipynb
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -1039,7 +1039,7 @@
        "Utilities         0  0.000000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,16 +1048,14 @@
     "total = data.isnull().sum().sort_values(ascending=False)\n",
     "percent = (data.isnull().sum()/data.isnull().count()).sort_values(ascending=False)\n",
     "missing_data = pd.concat([total, percent], axis=1, keys=['Total', 'Percent'])\n",
-    "missing_data.head(20)"
+    "missing_data.head(20)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": []
   }
  ],
