Estudo do comportamento das variáveis do problema House Prices do Kaggle

--- a/house_prices.ipynb
+++ b/house_prices.ipynb
@@ -41,6 +41,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1460, 81)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -459,6 +481,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Skew e Curtose\n",
+    "- Skew é uma medida da simetria em uma distribuição. Um conjunto de dados simétrico terá skew igual a 0. Assim, uma distribuição normal terá skew de 0. \n",
+    "- A medida curtose=0 indica mesmo achatamento da distribuição normal. \n",
+    "- A medida curtose>3 indica uma distribuição mais concentrada que a normal. Com calda mais que a normal."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {
@@ -475,18 +507,8 @@
     }
    ],
    "source": [
-    "print(\"Desvio: %f\" % data['SalePrice'].skew())\n",
-    "print(\"Curtose: %f\" % data['SalePrice'].kurt())\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Skew e Curtose\n",
-    "- Skew é uma medida da simetria em uma distribuição. Um conjunto de dados simétrico terá skew igual a 0. Assim, uma distribuição normal terá skew de 0. \n",
-    "- A medida curtose=0 indica mesmo achatamento da distribuição normal. \n",
-    "- A medida curtose>3 indica uma distribuição mais concentrada que a normal. Com calda mais que a normal."
+    "print(\"Skew: %f\" % data['SalePrice'].skew())\n",
+    "print(\"Kurtose: %f\" % data['SalePrice'].kurt())\n"
    ]
   },
   {
