--- a/house_prices-2.ipynb
+++ b/house_prices-2.ipynb
@@ -41,6 +41,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1460, 81)"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -459,6 +481,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Skew e Curtose\n",
+    "- Skew é uma medida da simetria em uma distribuição. Um conjunto de dados simétrico terá skew igual a 0. Assim, uma distribuição normal terá skew de 0. \n",
+    "- A medida curtose=0 indica mesmo achatamento da distribuição normal. \n",
+    "- A medida curtose>3 indica uma distribuição mais concentrada que a normal. Com calda mais que a normal."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 107,
    "metadata": {
@@ -475,18 +507,8 @@
     }
    ],
    "source": [
-    "print(\"Desvio: %f\" % data['SalePrice'].skew())\n",
-    "print(\"Curtose: %f\" % data['SalePrice'].kurt())\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Skew e Curtose\n",
-    "- Skew é uma medida da simetria em uma distribuição. Um conjunto de dados simétrico terá skew igual a 0. Assim, uma distribuição normal terá skew de 0. \n",
-    "- A medida curtose=0 indica mesmo achatamento da distribuição normal. \n",
-    "- A medida curtose>3 indica uma distribuição mais concentrada que a normal. Com calda mais que a normal."
+    "print(\"Skew: %f\" % data['SalePrice'].skew())\n",
+    "print(\"Kurtose: %f\" % data['SalePrice'].kurt())\n"
    ]
   },
   {
@@ -1209,6 +1231,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Segunda forma de detectar os atributos a serem removidos e os mais importantes usando coeficiente de correlação"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Find most important features relative to target\n",
+      "SalePrice        1.000000\n",
+      "OverallQual      0.790982\n",
+      "GrLivArea        0.708624\n",
+      "GarageCars       0.640409\n",
+      "GarageArea       0.623431\n",
+      "TotalBsmtSF      0.613581\n",
+      "1stFlrSF         0.605852\n",
+      "FullBath         0.560664\n",
+      "TotRmsAbvGrd     0.533723\n",
+      "YearBuilt        0.522897\n",
+      "YearRemodAdd     0.507101\n",
+      "GarageYrBlt      0.486362\n",
+      "MasVnrArea       0.477493\n",
+      "Fireplaces       0.466929\n",
+      "BsmtFinSF1       0.386420\n",
+      "LotFrontage      0.351799\n",
+      "WoodDeckSF       0.324413\n",
+      "2ndFlrSF         0.319334\n",
+      "OpenPorchSF      0.315856\n",
+      "HalfBath         0.284108\n",
+      "LotArea          0.263843\n",
+      "BsmtFullBath     0.227122\n",
+      "BsmtUnfSF        0.214479\n",
+      "BedroomAbvGr     0.168213\n",
+      "ScreenPorch      0.111447\n",
+      "PoolArea         0.092404\n",
+      "MoSold           0.046432\n",
+      "3SsnPorch        0.044584\n",
+      "BsmtFinSF2      -0.011378\n",
+      "BsmtHalfBath    -0.016844\n",
+      "MiscVal         -0.021190\n",
+      "Id              -0.021917\n",
+      "LowQualFinSF    -0.025606\n",
+      "YrSold          -0.028923\n",
+      "OverallCond     -0.077856\n",
+      "MSSubClass      -0.084284\n",
+      "EnclosedPorch   -0.128578\n",
+      "KitchenAbvGr    -0.135907\n",
+      "Name: SalePrice, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Find most important features relative to target\")\n",
+    "data_num_aux = data[numerical_features]\n",
+    "corr = data_num_aux.corr()\n",
+    "corr.sort_values([\"SalePrice\"], ascending = False, inplace = True)\n",
+    "print(corr.SalePrice)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### E para os atributos categóricos?\n",
     "\n",
     "- não faz sentido a análise do coeficiente de correlação para os atributos categóricos\n",
@@ -1454,7 +1545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Detecção de Outliers\n",
+    "# Detecção de Outliers - Dados de Treino\n",
     "\n",
     "- Inicialmente, nos atributos que tem maior correlação com SalePrice"
    ]
@@ -1524,26 +1615,33 @@
     "train.drop(train[(train['1stFlrSF'] > 4000)].index, inplace = True)\n",
     "\n",
     "train_num = train[data_num.columns]\n",
-    "train_cat = train[data_cat.columns] \n",
-    "#print(train_num.shape, train_cat.shape)"
+    "train_cat = train[data_cat.columns] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((1456, 57), (1456, 19), (1456, 38))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train.shape, train_num.shape, train_cat.shape)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Agora escolham outros atributos para também retirá-los"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "\n"
+    "### Break: Agora escolham outros atributos para detecção de possíveis outliers em seus valores"
    ]
   }
  ],
