Criação do Modelo Usando Gradient Boosting e Submissão da predição na plataforma Kaggle do problema House Prices

--- a/house_prices-4.ipynb
+++ b/house_prices-4.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +74,7 @@
        "(2919, 80)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -377,7 +377,7 @@
        "[8 rows x 37 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -709,7 +709,7 @@
        "[8 rows x 289 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -796,18 +796,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ticianacoelhodasilva/miniconda2/lib/python2.7/site-packages/sklearn/utils/validation.py:526: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(146, 1)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -837,7 +845,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 620181350.1976\n"
+      "MSE: 616426731.2423\n"
      ]
     }
    ],
@@ -848,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -858,13 +866,13 @@
      "output_type": "stream",
      "text": [
       "Feature ranking:\n",
-      "1. feature OverallQual (0.166377)\n",
-      "2. feature GrLivArea (0.136658)\n",
-      "3. feature LotArea (0.058546)\n",
-      "4. feature BsmtFinSF1 (0.053376)\n",
-      "5. feature TotalBsmtSF (0.050489)\n",
-      "6. feature YearRemodAdd (0.035767)\n",
-      "7. feature YearBuilt (0.032036)\n"
+      "1. feature OverallQual (0.166409)\n",
+      "2. feature GrLivArea (0.136620)\n",
+      "3. feature LotArea (0.058427)\n",
+      "4. feature BsmtFinSF1 (0.054267)\n",
+      "5. feature TotalBsmtSF (0.049640)\n",
+      "6. feature YearRemodAdd (0.036004)\n",
+      "7. feature YearBuilt (0.031677)\n"
      ]
     }
    ],
@@ -913,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -925,15 +933,6 @@
     "submission['SalePrice'] = prediction\n",
     "submission.to_csv(\"kaggle_house_price_gb.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
