--- a/house_prices-4.ipynb
+++ b/house_prices-4.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +74,7 @@
        "(2919, 80)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -377,7 +377,7 @@
        "[8 rows x 37 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -709,7 +709,7 @@
        "[8 rows x 289 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -756,12 +756,12 @@
     "from sklearn import ensemble\n",
     "from sklearn import datasets\n",
     "from sklearn.utils import shuffle\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -815,7 +815,7 @@
        "(146, 1)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,8 +835,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Principais métricas de avaliação de modelos de Regressão\n",
+    "\n",
+    "- O Mean Absolute Error (or MAE), isto é, o erro médio absoluto é a soma das diferenças absolutas entre o valor real e o valor predito. Esta métrica dá uma ideia de quão errado é a predição. \n",
+    "\n",
+    "- O Mean Squared Error (or MSE), isto é, o erro quadrático médio é semelhante ao MAE, provendo (a grosso modo) a magnitude do erro. \n",
+    "\n",
+    "- O R^2 (or R Squared) é uma métrica que oferece uma indicação de quão bom uma conjunto de predições se adequa ao valor real. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -845,18 +858,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 616426731.2423\n"
+      "Mean absolute error: 15884.96\n",
+      "Mean squared error: 613208653.13\n",
+      "R squared: 0.87\n"
      ]
     }
    ],
    "source": [
-    "mse = mean_squared_error(y_realdata_test, y_pred)\n",
-    "print(\"MSE: %.4f\" % mse)"
+    "print(\"Mean absolute error: %.2f\"\n",
+    "      % mean_absolute_error(y_pred, y_realdata_test))\n",
+    "print(\"Mean squared error: %.2f\"\n",
+    "      % mean_squared_error(y_pred, y_realdata_test))\n",
+    "# Variance score ou quadrado do coeficiente de correlação\n",
+    "print('R squared: %.2f' % r2_score(y_pred, y_realdata_test)) #quanto mais próximo de 1, melhor a predição"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -866,13 +885,13 @@
      "output_type": "stream",
      "text": [
       "Feature ranking:\n",
-      "1. feature OverallQual (0.166409)\n",
-      "2. feature GrLivArea (0.136620)\n",
-      "3. feature LotArea (0.058427)\n",
-      "4. feature BsmtFinSF1 (0.054267)\n",
-      "5. feature TotalBsmtSF (0.049640)\n",
-      "6. feature YearRemodAdd (0.036004)\n",
-      "7. feature YearBuilt (0.031677)\n"
+      "1. feature OverallQual (0.166364)\n",
+      "2. feature GrLivArea (0.137950)\n",
+      "3. feature LotArea (0.057620)\n",
+      "4. feature BsmtFinSF1 (0.053920)\n",
+      "5. feature TotalBsmtSF (0.050556)\n",
+      "6. feature YearRemodAdd (0.035572)\n",
+      "7. feature YearBuilt (0.031853)\n"
      ]
     }
    ],
